# Meta_Hackathon_2026

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  openenv_client.py  pyproject.toml  requirements.txt  self_test.py  start.sh
agent/: agent.py
env/: actions.py  environment.py  events.py  reward.py  state.py
grader/: grader.py
server/: app.py
static/: index.html
tasks/: easy.py  hard.py  medium.py
